写了一些规划

--- a/Design/报告.md
+++ b/Design/报告.md
@@ -34,6 +34,18 @@
 
 ​	用户在主页点击讨论区进入讨论区界面。在该界面的右边点击想查看的板块对应的按钮，在该页面的左边精彩内容展示的下方将列出属于该板块的文章
 
+#### 1.1.7 浏览文章和评论信息
+
+​	用户在讨论区界面，通过选择相应板块，从而可以浏览到相应板块的文章的基本信息，如标题，作者，发布时间以及评论量等。点击文章会进入文章的详细页面，该页面的详细内容以及评论信息。
+
+#### 1.1.8 发布文章
+
+​	用户在登录状态下通过讨论区界面，点击发布按钮会转到文章的编辑页面。在编辑页面中，用户可编写文章标题，选择文章所属板块，编写文章内容，点击发布按钮。之后转回讨论区就可以看到自己发布的文章。
+
+#### 1.1.9 发表评论
+
+​	用户在某一篇文章下面
+
 
 
 #### 1.2 数据流图
