--- a/Design/报告.md
+++ b/Design/报告.md
@@ -44,7 +44,11 @@
 
 #### 1.1.9 发表评论
 
-​	用户在某一篇文章下面
+​	用户在登录状态下进入某篇文章的页面下，在评论的最底部有一个富文本编辑框，在该文本编辑框内写入评论内容，点击发表即可对该文章成功发表评论。
+
+#### 1.2.0 删除文章和评论
+
+​	用户在个人中新
 
 
 
