添加了后台的几个页面和相关的路由和表单

--- a/Design/报告.md
+++ b/Design/报告.md
@@ -48,7 +48,15 @@
 
 #### 1.2.0 删除文章和评论
 
-​	用户在个人中心的页面中
+​	用户在登录状态下在个人中心的页面中文章管理和评论管理中可以浏览自己发表的文章和评论，在相应的文章和评论边会有删除的按钮，点击即可删除。而管理原则可以浏览所有用户发表的文章和评论，并进行删除。
+
+#### 1.2.1 管理用户信息
+
+​	管理员在登录状态下，进入个人中心，点击用户管理进行用户的管理。主要功能是删除和查询用户，分别通过用户旁边的删除按钮删除用户和通过查询框输入信息来查询用户。
+
+#### 1.2.2 添加删除战队以及选手信息
+
+​	管理员在登录状态下，进入个人中心，点击战队管理进行战队的管理。主要功能是查看并添加删除战队，可以通过浏览面板查看战队信息，每个战队信息右端有删除按钮，点击删除即删除该战队和战队的所有选手信息，添加战队的时候通过完善下面的队伍以及其相应位置的选手信息，点击添加按钮即可。
 
 
 
