添加了后台的几个页面和相关的路由和表单

--- a/Design/报告.md
+++ b/Design/报告.md
@@ -58,7 +58,13 @@
 
 ​	管理员在登录状态下，进入个人中心，点击战队管理进行战队的管理。主要功能是查看并添加删除战队，可以通过浏览面板查看战队信息，每个战队信息右端有删除按钮，点击删除即删除该战队和战队的所有选手信息，添加战队的时候通过完善下面的队伍以及其相应位置的选手信息，点击添加按钮即可。
 
+#### 1.2.3 添加删除比赛数据
 
+​	管理员在登录状态下进入个人中心，点击比赛管理进行比赛数据的管理。主要的功能包含添加比赛数据和查看并删除比赛数据。添加比赛数据，填写相应的比赛信息并点击添加比赛按钮即可成功添加比赛数据。关于查看和删除比赛数据，通过数据面板可查看比赛信息，在该条比赛信息的右端点击删除按钮即可删除该条比赛信息。
+
+#### 1.2.4 查看战队信息
+
+​	用户在导航栏点击赛事资料
 
 #### 1.2 数据流图
 
